# sugi-poc2-exp

./: Dockerfile  README.md  invoke.yaml  pyproject.toml  tasks.py
dags/: bq_component.yaml  predict_component.yaml  runner.py  train_component.yaml
exps/: exp001.yaml  exp002.yaml  exp003.yaml  exp004.yaml  exp005.yaml  exp006.yaml
src/: bq.py  gcs.py  utils.py  vertex.py
src/imp/: tasks.py
src/imp/sql/: m_store_opening_hours.sql
src/predict/: predictor.py  tasks.py
src/predict/sql/: date_store_yj_abc.sql  insert_prediction_result.sql  predict_dataset_exp042.sql  predict_dataset_exp046.sql  predict_dataset_exp047.sql  prediction_result.sql
src/preprocess/: tasks.py
src/preprocess/sql/: diff_monthly_category_feature.sql  diff_monthly_holiday_feature.sql  diff_monthly_prescription.sql  diff_monthly_target_feature.sql  doctor_feature.sql  min_max_scaler.sql  monthly_category_feature.sql  monthly_category_feature_v2.sql  monthly_holiday_feature.sql  monthly_last_prescription_feature.sql  monthly_prescription.sql  monthly_target_feature.sql  patient_agg_feature.sql  patient_feature.sql  patient_prescription.sql  scaled_monthly_category_feature.sql  scaled_monthly_holiday_feature.sql  scaled_monthly_prescription.sql  scaled_monthly_target_feature.sql
src/train/: tasks.py  trainer.py
src/train/sql/: insert_evaluation_result.sql  train_dataset_exp001.sql  train_dataset_exp002.sql  train_dataset_exp004.sql  train_dataset_exp005.sql  (+4 more)
yamls/: feature.yaml  kfp.yaml  predict.yaml  preprocess.yaml  prod_variables.json  stg_variables.json  train.yaml
